[package]
name = "portledger"
version = "0.4.0"
edition = "2021"
description = "Persistent visual map of local ports and project ownership"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.1"
crossterm = "0.29"
dialoguer = "0.11"
dirs = "6.0"
humantime = "2.1"
once_cell = "1.21"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-words = "1.1"

[dev-dependencies]
tempfile = "3.17"
